Add git tagging and reset package version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mapbox-gl-shade-layer",
-  "version": "0.11.1",
+  "version": "0.0.1",
   "description": "Display terrain and structure shadows cast by the sun in a custom style layer",
   "main": "dist/mapbox-gl-shade-layer.umd.min.js",
   "scripts": {
@@ -23,5 +23,6 @@
   "bugs": {
     "url": "https://github.com/ted-piotrowski/mapbox-gl-shade-layer/issues"
   },
-  "homepage": "https://github.com/ted-piotrowski/mapbox-gl-shade-layer#readme"
+  "homepage": "https://github.com/ted-piotrowski/mapbox-gl-shade-layer#readme",
+  "postpublish" : "PACKAGE_VERSION=$(cat package.json | grep \\\"version\\\" | head -1 | awk -F: '{ print $2 }' | sed 's/[\",]//g' | tr -d '[[:space:]]') && git tag v$PACKAGE_VERSION && git push --tags"
 }
