--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "mapbox-gl-shade-layer",
+  "name": "mapbox-gl-shadow-simulator",
   "version": "0.13.1",
   "description": "Display terrain and structure shadows cast by the sun in a custom style layer",
-  "main": "dist/mapbox-gl-shade-layer.umd.min.js",
+  "main": "dist/mapbox-gl-shadow-simulator.umd.min.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ted-piotrowski/mapbox-gl-shade-layer.git"
+    "url": "git+https://github.com/ted-piotrowski/mapbox-gl-shadow-simulator.git"
   },
   "keywords": [
     "mapbox",
@@ -21,9 +21,9 @@
   "author": "Ted Piotrowski",
   "license": "UNLICENSED",
   "bugs": {
-    "url": "https://github.com/ted-piotrowski/mapbox-gl-shade-layer/issues"
+    "url": "https://github.com/ted-piotrowski/mapbox-gl-shadow-simulator/issues"
   },
-  "homepage": "https://github.com/ted-piotrowski/mapbox-gl-shade-layer#readme",
+  "homepage": "https://github.com/ted-piotrowski/mapbox-gl-shadow-simulator#readme",
   "dependencies": {
     "suncalc": "^1.9.0"
   }
