--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
   "homepage": "https://github.com/ted-piotrowski/mapbox-gl-shadow-simulator#readme",
   "dependencies": {
     "suncalc": "^1.9.0"
+  },
+  "devDependencies": {
+    "@types/mapbox-gl": "^2.7.8"
   }
 }
